test/tests/stages/6_statements_and_conditional_expressions/valid/extra_credit/goto_label.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  int
  identifier(main)
  (
  void
  )
  {
  goto
  identifier(label)
  ;
  return
  const int(0)
  ;
  identifier(label)
  :
  return
  const int(1)
  ;
  }
