test/tests/stages/6_statements_and_conditional_expressions/invalid_parse/extra_credit/label_expression_clause.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[13]:
  int
  identifier(main)
  (
  void
  )
  {
  const int(1)
  &&
  identifier(label)
  :
  const int(2)
  ;
  }
